--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
   <div class="animation-wrapper">
-    <h1>Building <span class="green">Up</span>.</h1>
-    <h2>That's what we do here.</h2>
+    <section id="home-title">
+      <h1>Building <span class="green">Up</span>.</h1>
+      <h2>That's what we do here.</h2>
+    </section>
   </div>
   <script type="module" src="./main.js"></script>
 </body>
