Animations fall & trail

--- a/index.html
+++ b/index.html
@@ -8,10 +8,19 @@
 </head>
 <body>
   <div class="animation-wrapper">
-    <section id="home-title">
-      <h1>Building <span class="green">Up</span>.</h1>
-      <h2>That's what we do here.</h2>
-    </section>
+    <div class="window">
+      <section id="home-title">
+        <h1 class="falling-title">
+          <span>B</span><span>U</span><span>I</span><span>L</span><span>D</span><span>I</span><span>N</span><span>G</span>
+          <span class="green animation-delayed">UP</span><span>.</span>
+        </h1>
+        <h2 class="trailed-text">
+          <div class="rope"></div>
+          That's what we do here.
+          <div class="rope"></div>
+        </h2>
+      </section>
+    </div>
   </div>
   <script type="module" src="./main.js"></script>
 </body>
